@@ -1,3 +1,10 @@
+2014-10-03  Maciej W. Rozycki  <macro@codesourcery.com>
+
+	* config/rs6000/e500.h (HARD_REGNO_CALLER_SAVE_MODE): Remove
+	macro.
+	* config/rs6000/rs6000.h (HARD_REGNO_CALLER_SAVE_MODE): Handle
+	TARGET_E500_DOUBLE case here.
+
 2014-10-03  Marc Glisse  <marc.glisse@inria.fr>
 
 	PR c++/54427
